syntax = "proto3";

import "google/api/annotations.proto";

service PingPong {
    rpc Ping(PingRequest) returns (PingResponse) {
        option (google.api.http) = {post: "/ping" body: "*"};
    }
}

message PingRequest {
    string ping = 1;
}

message PingResponse {
    string pong = 2;
}